Change interface, add create game level

--- a/src/styles/birds.scss
+++ b/src/styles/birds.scss
@@ -10,7 +10,7 @@
   background-image: url(../assets/locations/birds/birds.png);
 }
 .birdsLocation .popUp__locationName{
-  color: #8F63C7;
+  color: #3E2D4C;
 }
 .gameLocation-birds{
   .svgIcon{
