--- a/src/styles/stylesSpring.scss
+++ b/src/styles/stylesSpring.scss
@@ -28,7 +28,10 @@
   .menu__tip_count, .rules__goBg{
     background-color: #6C72F0;
   }
-  .shop, .rules{
+  .rules__menu, .leaderBoardInfo_my .leaderBoardInfo__rank, .leaderBoardInfo_my .leaderBoardInfo__playerInfo, .startCreateGame{
+    background-color: #3A307D;
+  }
+  .shop, .rules, .leaderBoardInfo_my .leaderBoardInfo__image{
     border-color: #3A307D;
   }
   .shop .rules__menu, .settings__text{
