--- a/src/styles/stylesBg2.css
+++ b/src/styles/stylesBg2.css
@@ -21,10 +21,13 @@
 .chosenAppBg2 .words__letters-block_done .words__letter, .chosenAppBg2 .action-block__letters .action-block__letter_selected {
   background-color: #6277C2;
 }
+.chosenAppBg2 .rules__menu, .chosenAppBg2 .leaderBoardInfo_my .leaderBoardInfo__rank, .chosenAppBg2 .leaderBoardInfo_my .leaderBoardInfo__playerInfo, .chosenAppBg2 .startCreateGame {
+  background-color: #192B6C;
+}
 .chosenAppBg2 .menu__tip_count, .chosenAppBg2 .rules__goBg {
   background-color: #192B6C;
 }
-.chosenAppBg2 .shop, .chosenAppBg2 .rules {
+.chosenAppBg2 .shop, .chosenAppBg2 .rules, .chosenAppBg2 .leaderBoardInfo_my .leaderBoardInfo__image {
   border-color: #192B6C;
 }
 .chosenAppBg2 .shop .rules__menu, .chosenAppBg2 .settings__text {
