--- a/src/styles/stylesLocations.css
+++ b/src/styles/stylesLocations.css
@@ -269,7 +269,7 @@
 }
 
 .birdsLocation .popUp__locationName {
-  color: #8F63C7;
+  color: #3E2D4C;
 }
 
 .gameLocation-birds {
@@ -309,17 +309,6 @@
   overflow: auto !important;
 }
 
-.blurBackground {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  backdrop-filter: blur(5px);
-  z-index: 9;
-  cursor: pointer;
-}
-
 .popUp {
   position: absolute;
   top: 50%;
@@ -351,6 +340,7 @@
   box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.27);
   height: 40px;
   border-radius: 20px;
+  font-weight: bold;
 }
 
 .popUp__close {
@@ -471,6 +461,7 @@
   height: 100%;
   overflow-x: auto;
   cursor: pointer;
+  margin-right: 100px;
 }
 
 .location .menu__button-back {
