--- a/src/styles/stylesLocations.scss
+++ b/src/styles/stylesLocations.scss
@@ -8,20 +8,6 @@
 .locationOpened{
     overflow: auto !important;
 }
-.blurBackground{
-    position: absolute;
-    top: 0;
-    left: 0;
-
-    width: 100%;
-    height: 100%;
-
-    backdrop-filter: blur(5px);
-
-    z-index: 9;
-
-    cursor: pointer;
-}
 .popUp{
     position: absolute;
     top: 50%;
@@ -56,6 +42,7 @@
     box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.27);
     height: 40px;
     border-radius: 20px;
+    font-weight: bold;
 }
 .popUp__close{
     position: absolute;
@@ -174,6 +161,7 @@
     height: 100%;
     overflow-x: auto;
     cursor: pointer;
+    margin-right: 100px;
 }
 .location .menu__button-back{
     display: inline-block;
