--- a/src/styles/stylesNewYear.scss
+++ b/src/styles/stylesNewYear.scss
@@ -24,7 +24,10 @@
   .words__letters-block_done .words__letter, .action-block__letters .action-block__letter_selected{
     background-color: #E75858;
   }
-  .shop, .rules{
+  .rules__menu, .leaderBoardInfo_my .leaderBoardInfo__rank, .leaderBoardInfo_my .leaderBoardInfo__playerInfo, .startCreateGame{
+    background-color: #C21332;
+  }
+  .shop, .rules, .leaderBoardInfo_my .leaderBoardInfo__image{
     border-color: #C21332;
   }
   ::-webkit-scrollbar-thumb {
@@ -49,6 +52,9 @@
   @keyframes  showNewWord5{
     0%{background-color: rgba(255, 255, 255, 0.85);}
     100%{background-color: #C21332;}
+  }
+  .level .level_star{
+    background-color: rgba(184, 177, 177, 0.83);
   }
 
   //Магазин
@@ -102,8 +108,8 @@
     width: 100%;
     height: 100%;
 
-    background-image: url("../assets/snow_1.png"), url("../assets/snow_2.png"), url("../assets/snow_3.png");
-    animation: snow 20s linear infinite;
+    //background-image: url("../assets/snow_1.png"), url("../assets/snow_2.png"), url("../assets/snow_3.png");
+    //animation: snow 20s linear infinite;
   }
 
   @keyframes snow {
