--- a/src/styles/stylesLocations.css
+++ b/src/styles/stylesLocations.css
@@ -305,6 +305,57 @@
     background-size: cover;
   }
 }
+/*Волшебство сказок*/
+.gameLocationWrapper-cinema::-webkit-scrollbar-thumb {
+  background-color: #9C0F0F;
+}
+
+.gameLocationWrapper-cinema::-webkit-scrollbar-track {
+  background-color: #e4ecf8;
+  border-radius: 0;
+}
+
+.cinemaLocation .popUp__locationPicture {
+  background-image: url(../assets/locations/cinema/cinema.png);
+}
+
+.cinemaLocation .popUp__locationName {
+  color: #9C0F0F;
+}
+
+.gameLocation-cinema {
+  background: url(../assets/locations/cinema/map.png) center center no-repeat;
+  background-size: cover;
+}
+.gameLocation-cinema .svgIcon {
+  fill: #9C0F0F;
+}
+.gameLocation-cinema .levelsTop__allStars {
+  color: #9C0F0F;
+}
+.gameLocation-cinema .menu-star, .gameLocation-cinema .newElement {
+  background-color: #DD0000;
+}
+
+.gameLocation-cinema::-webkit-scrollbar-thumb {
+  background-color: #9C0F0F;
+}
+
+@media (min-width: 1000px) {
+  .gameLocation-cinema .location__lastLevel {
+    box-shadow: 0 0 25px 10px #9C0F0F;
+  }
+}
+.gameLocation-cinema .location__upLevel {
+  top: 25%;
+}
+
+@media (orientation: portrait) {
+  .gameLocation-cinema {
+    background: url(../assets/locations/cinema/map_port.png) center center no-repeat;
+    background-size: cover;
+  }
+}
 .locationOpened {
   overflow: auto !important;
 }
