Change IOS click bug, add new levels

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -648,7 +648,8 @@ html, body {
 .menu__words-amount:after, .menu__button-next-level:after,
 .menu__button-back:after, .menu__tip:after,
 .prev-location:after, .next-location:after, .switchSettings:after,
-.popUp__close:after, .switchShowLocation:after, .switchShop:after {
+.popUp__close:after, .switchShowLocation:after, .switchShop:after,
+.action-block__button-send:after {
   position: absolute;
   content: "";
   top: -10px;
@@ -1088,6 +1089,7 @@ html, body {
 }
 
 .action-block__button-send {
+  position: relative;
   display: block;
   margin-left: 25px;
   width: 40px;
