Add new location

--- a/src/styles/default.scss
+++ b/src/styles/default.scss
@@ -62,3 +62,6 @@
 .houseLocation .popUp__locationPicture{
   background-image: url(../assets/locations/default/house.png);
 }
+.houseLocation .popUp__locationName{
+  color: #C05252;
+}
