--- a/src/styles/event.scss
+++ b/src/styles/event.scss
@@ -1,6 +1,6 @@
 /*Волшебство сказок*/
 .gameLocationWrapper-event::-webkit-scrollbar-thumb, .levels-wrapper::-webkit-scrollbar-thumb {
-  background-color: #C05252;
+  background-color: #4E8B00;
 }
 .gameLocationWrapper-event::-webkit-scrollbar-track {
   background-color: #e4ecf8;
@@ -10,19 +10,19 @@
   background-image: url(../assets/locations/event/event.png);
 }
 .eventLocation .popUp__locationName{
-  color: #C05252;
+  color: #4E8B00;
 }
 .gameLocation-event{
   .svgIcon{
-    fill: #C05252;
+    fill: #4E8B00;
   }
   background: url(../assets/locations/event/map.png) center center no-repeat;
   background-size: cover;
   .levelsTop__allStars{
-    color: #C05252;
+    color: #4E8B00;
   }
   .menu-star, .newElement{
-    background-color: #d22f2f;
+    background-color: #417200;
   }
   .eventProperty{
     background: url(../assets/locations/event/map.png) center center no-repeat;
@@ -31,22 +31,22 @@
 }
 .gameLocationWrapper-event{
   .rules__menu{
-    background-color: #C05252;
+    background-color: #4E8B00;
   }
   .rules .settings__text{
-    color: #C05252;
+    color: #4E8B00;
   }
   .rules .svgIcon{
-    fill: #C05252;
+    fill: #4E8B00;
   }
 }
 .gameLocation-event::-webkit-scrollbar-thumb {
   //border-radius: 0;
-  background-color: #C05252;
+  background-color: #4E8B00;
 }
 @media (min-width: 1000px) {
   .gameLocation-event .location__lastLevel{
-    box-shadow: 0 0 25px 10px #C05252;
+    box-shadow: 0 0 25px 10px #4E8B00;
   }
 }
 
@@ -56,3 +56,29 @@
     background-size: cover;
   }
 }
+//
+//
+//.gameLocationWrapper-event .rules__menu{
+//  width: 105%;
+//  background: url(../assets/locations/event/head.svg) center center no-repeat;
+//  background-size: 100%;
+//}
+//.gameLocationWrapper-event .rules{
+//  background: url(../assets/locations/event/bg.svg) center center no-repeat;
+//  background-size: cover;
+//}
+//.gameLocationWrapper-event .rules:before{
+//  content: "";
+//  position: absolute;
+//  left: -10%;
+//  top: 50%;
+//  transform: translateX(-50%);
+//
+//  width: 120%;
+//  height: 80%;
+//
+//  background: url(../assets/locations/event/bg_zad.png) center center no-repeat;
+//  background-size: cover;
+//
+//  z-index: -1;
+//}
